--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -49,7 +49,7 @@
 
 .col a:hover {
     color: white;
-    transform: scale(1.3);
+    /* transform: scale(1.3); */
     transition: all .2s ease-in-out;
 }
 
