--- a/src/components/Navbar/elements/Menu.css
+++ b/src/components/Navbar/elements/Menu.css
@@ -47,7 +47,7 @@
 
 .menu a:active, .menu a:hover {
     color: var(--typewriter);
-    transform: scale(1.05);
+    /* transform: scale(1.05); */
 }
 
 @keyframes slide-in-right {
