--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -10,7 +10,7 @@
   z-index: 1;
 }
 .home h1 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
 .home h3 {
   font-size: 2rem;
@@ -22,6 +22,12 @@
   border-color: transparent;
   gap: .2rem;
   display: block;
+  box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.396);
+  transition: all .5s ease-in-out;
+}
+.home-card:hover {
+  box-shadow: 0px 30px 20px 2px rgba(0, 0, 0, 0.656);
+  transform: translate(0, -5%);
 }
 
 .home-card h2 {
@@ -37,7 +43,6 @@
   transition: all .3s ease-in;
   cursor: pointer;
 }
-
 
 .alert-card {
   box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.109);
@@ -69,16 +74,19 @@
 @media (max-width: 700px) {
   .home-card {
     max-width: 100%;
-    width: 40vw;
-    display: block;
-    padding: 2rem 1rem;
+    width: 60vw;
     flex-direction: row;
   }
+
   .home h1 {
     font-size: 2.5rem;
   }
   .home h3 {
     font-size: 1.2rem;
+  }
+
+  .line {
+    display: flex;
   }
   
 }
