--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,6 +8,8 @@
   width: 100%;
   position: relative;
   z-index: 1;
+  height: 100%;
+  max-height: 10rem;
 }
 .home h1 {
   font-size: 4rem;
@@ -31,7 +33,8 @@
 }
 
 .home-card h2 {
-  color: #2bb7cc;
+  /* color: #2bb7cc; */
+  color: #00ffff;
   font-weight: 300;
 }
 .home-card a {
