--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -22,8 +22,9 @@
   max-width: 40%;
   background-color: #092234;
   border-color: transparent;
-  gap: .2rem;
-  display: block;
+  gap: 1rem;
+  border-radius: 1rem;
+  /* display: block; */
   box-shadow: 0px 10px 20px 2px rgba(0, 0, 0, 0.396);
   transition: all .5s ease-in-out;
 }
@@ -76,8 +77,7 @@
 
 @media (max-width: 700px) {
   .home-card {
-    max-width: 100%;
-    width: 60vw;
+    max-width: 50%;
     flex-direction: row;
   }
 
@@ -86,10 +86,6 @@
   }
   .home h3 {
     font-size: 1.2rem;
-  }
-
-  .line {
-    display: flex;
   }
   
 }
