--- a/src/pages/Programming/elements/ProgrammingForm.css
+++ b/src/pages/Programming/elements/ProgrammingForm.css
@@ -1,10 +1,11 @@
 
 form {
-    width: 60vw;
-    max-width: 500px;
-    min-width: 300px;
-    margin: 0 auto;
+    width: 100%;
+    max-width: 55vw;
+    padding: 2rem;
+    margin: auto;
     padding-bottom: 2em;
+    text-align: left;
 }
 
 fieldset {
@@ -17,10 +18,6 @@ fieldset {
 label {
     display: block;
     margin: 0.5rem 0;
-}
-
-legend {
-    /* border-bottom: 3px solid #7f22e2; */
 }
 
 input,
@@ -128,8 +125,9 @@ input[type="radio"] {
         width: 90%;
     }
     form {
-        width: 85vw;
-        min-width: 100px;
+        max-width: 50%;
+        min-width: 72vw;
+        
     }
     input[type="submit"] {
         width: 60%;
