--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,35 +1,12 @@
-.card {
-    background-color: #402b763e;
+/* .card {
     padding: 40px;
     border-radius: 2rem;
-    border: 1px solid #e5a9ff;
     text-align: left;
     max-width: 50vw;
     margin: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+} */
 
-.card-style-1 {
-    background: linear-gradient(145deg, #372587 10%, #4f2a9f,  #3e0b81 100%);
-    padding: 10px;
-    border-radius: 1rem;
-    text-align: left;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    min-width: 30%;
-}
-.card-style-1 h3 {
-    color: #f3e2ff;
-    font-size: 1.2rem;
-    font-weight: 0.5rem;
-    border-bottom: 3px solid #c6a9ffc0;
-    margin: 5px;
-}
-
-.line {
-    border-bottom: 3px solid rgba(0, 0, 0, 0.242);
-    padding: .5rem 0;
-    display: none;
-}
 
 .relevant {
     background-color: #2116525d;
@@ -44,14 +21,14 @@
 }
 
 @media (max-width: 600px) {
-    .card {
+    /* .card {
         max-width: 85vw;
         padding: 1rem;
         border-radius: 1rem;
         margin-bottom: 5rem;
         
         
-    }
+    } */
     .card-style-1 {
         min-width: 90%;
         margin: 5px 0 ;
