--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,9 +3,14 @@
     text-align: left;
     width: 50vw;
     margin: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+.card img {
+    display: block;
+    min-width: 15rem;
+    padding: 1rem;
+    margin: 0 auto;
+    border-radius: 2rem;
+}
 
 .card-style-1 {
     background: linear-gradient(145deg, #372587 10%, #4f2a9f,  #3e0b81 100%);
