--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -2,4 +2,33 @@
     background-color: #402b763e;
     border: 1px solid #e5a9ff;
     border-radius: 2rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.container-math-1 {
+    padding: 10px;
+    background-color: #333bae;
+    box-shadow: 15px 15px 1px 0 #4652ef;
+    border-radius: 2rem;
+}
+
+.container-math-1 img {
+    width: 100%;
+    max-width: 30%;
+    border-radius: 2rem;
+}
+.container-math-1 a {
+    color: rgb(227, 237, 255);
+}
+
+
+
+.container-math-2 {
+    background-color: #4652ef;
+    padding: 0 2rem;
+    padding: 10px;
+    border-radius: 1rem;
+    text-align: left;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    min-width: 30%;
 }
