--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -7,8 +7,8 @@
 
 .container-math-1 {
     padding: 10px;
-    background-color: #333bae;
-    box-shadow: 15px 15px 1px 0 #4652ef;
+    background-color: #ffffff;
+    box-shadow: 5px 5px 5px 0 #5a5a5a4e;
     border-radius: 2rem;
 }
 
