--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -3,7 +3,7 @@
     width: auto;
     display: flex;
     /* flex-wrap: wrap; */
-    justify-content: space-around;
+    
     flex-direction: row;
     margin: 0 auto;
 }
@@ -13,8 +13,8 @@
     width: max-content;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    /* justify-content: center; */
     margin: 0 auto;
 }
 
