--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -48,7 +48,7 @@
 }
 
 .button-77:before {
-    background-color: rgba(249, 58, 19, .32);
+    background-color: rgba(249, 115, 19, 0.32);
     content: "";
     display: block;
     height: 100%;
@@ -62,7 +62,7 @@
 
 .button-77:after {
     background-color: initial;
-    background-image: linear-gradient(92.83deg, #ff7426 0, #f93a13 100%);
+    background-image: linear-gradient(92.83deg, #f7aa08 0, #e87911 100%);
     bottom: 4px;
     content: "";
     display: block;
